# emily-sampler

./: .editorconfig  .gitignore  README.md
C/: Makefile  README.md  curses.c  hello_world.c  if.c
C++/: README.md  hello_world.cpp
C++/plunger/: .editorconfig  .gitignore  build.sh  run.sh
Go/: .dockerignore  .editorconfig  Dockerfile  Makefile  README.md  docker-compose.yml  go.sum  main.go
Go/nginx/: nginx.conf
Go/todos-backend/: .editorconfig  Dockerfile  Makefile  go.mod  main.go
Go/todos-frontend-react/: .dockerignore  .editorconfig  Dockerfile  package.json
Go/todosapi/: api_handlers.go  routes.go  todosapi_test.go
Go/webpack_proxy/: webpack_proxy.go
Go/website/: .dockerignore  Dockerfile  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
HTML/: README.md  hello_world.html  index.html  scripts.js  styles.css
JavaScript/: README.md  package.json
Python/: README.md
Ruby/: README.md
SDL/: README.md  compile.sh  compile_mac.sh  sdl_main.c
go/: README.md  main.go
go/go-plunger/: Makefile  README.md  go-plunger  go.mod  main.go
plunger/: CMakeLists.txt  README.md  architecture.md
plunger/src/: CMakeLists.txt  Command.hpp  DropItem.cpp  DropItem.hpp  Game.cpp  Game.hpp  IGame.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  Makefile  MoveToRoom.cpp  MoveToRoom.hpp  PickUpItem.cpp  Player.hpp  Room.cpp  Room.hpp  RoomId.hpp  UseItem.cpp  UseItem.hpp  main.cpp
rust/roguelike/: Cargo.toml
rust/sdl/: Cargo.toml
todos/: .editorconfig  README.md  docker-compose.yml
todos/api/: .dockerignore  (+6 more)
(+87 files in other folders)
