[package]
authors = ["William Manahan-Makley <info@willmakley.dev>"]
edition = "2018"
name = "rust-sdl-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
default-features = false
features = ["ttf", "image", "gfx", "mixer"]
version = "0.34"
